--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,11 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Environment Variables (CRITICAL)
+.env
+.env.local
+.env.*
+
 node_modules
 dist
 dist-ssr
