--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "i18next": "^25.7.4",
     "i18next-browser-languagedetector": "^8.2.0",
     "i18next-http-backend": "^3.0.2",
+    "lightweight-charts": "^5.1.0",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-i18next": "^16.5.3",
     "react-router-dom": "^7.11.0",
+    "react-tradingview-widget": "^1.3.2",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
